syntax = "proto3";

package taskguild.v1;

// Pagination request parameters.
message PaginationRequest {
  int32 limit = 1;
  int32 offset = 2;
}

// Pagination response metadata.
message PaginationResponse {
  int32 total = 1;
  int32 limit = 2;
  int32 offset = 3;
}
